analysis-reports/clang-tidy/._before_libuxre_regcomp.c.txt
/home/sj/1/refactoring-heirloom-grep/before/libuxre/colldata.h:57:10: error: 'wcharm.h' file not found with <angled> include; use "quotes" instead [clang-diagnostic-error]
#include <wcharm.h>
         ^~~~~~~~~~
         "wcharm.h"
/home/sj/1/refactoring-heirloom-grep/before/libuxre/re.h:40:10: error: 'colldata.h' file not found with <angled> include; use "quotes" instead [clang-diagnostic-error]
#include <colldata.h>
         ^~~~~~~~~~~~
         "colldata.h"
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:42:6: error: no member named 're_flags' in 'struct re_pattern_buffer' [clang-diagnostic-error]
        ep->re_flags = lex.flags & ~(REG_NOTBOL | REG_NOTEOL | REG_NONEMPTY);
        ~~  ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:42:57: error: use of undeclared identifier 'REG_NONEMPTY' [clang-diagnostic-error]
        ep->re_flags = lex.flags & ~(REG_NOTBOL | REG_NOTEOL | REG_NONEMPTY);
                                                               ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:43:6: error: no member named 're_col' in 'struct re_pattern_buffer' [clang-diagnostic-error]
        ep->re_col = lex.col;
        ~~  ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:44:6: error: no member named 're_mb_cur_max' in 'struct re_pattern_buffer' [clang-diagnostic-error]
        ep->re_mb_cur_max = lex.mb_cur_max;
        ~~  ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:55:48: error: use of undeclared identifier 'REG_ONESUB' [clang-diagnostic-error]
        if (ep->re_nsub != 0 && (flags & (REG_NOSUB | REG_ONESUB)) == 0
                                                      ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:58:7: error: no member named 're_flags' in 'struct re_pattern_buffer' [clang-diagnostic-error]
                ep->re_flags |= REG_NFA;
                ~~  ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:64:7: error: no member named 're_flags' in 'struct re_pattern_buffer' [clang-diagnostic-error]
                ep->re_flags |= REG_DFA;
                ~~  ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:67:12: error: no member named 're_flags' in 'struct re_pattern_buffer' [clang-diagnostic-error]
                        if (ep->re_flags & REG_NFA)
                            ~~  ^
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regcomp.c:68:27: error: no member named 're_nfa' in 'struct re_pattern_buffer' [clang-diagnostic-error]
                                libuxre_regdelnfa(ep->re_nfa);
                                                  ~~  ^
